--- a/views/partials/products.jade
+++ b/views/partials/products.jade
@@ -1,7 +1,7 @@
 div(ng-controller='ProductsController')
 	.categories
 		a(href='products/show') All products 
-	ul(style='width:600px', class="manyProducts")
+	ul(class="manyProducts")
 		li(ng-repeat="product in products | orderBy:'price'")
 			section(products-many)
 			//h3(product-title)
