--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html(ng-app="myApp",ng-controller='AppCtrl')
 		base(href='/')
 		title(ng-bind="Page.title()+Page.title2()") Loading...
 		meta(name="description", content="Page.description()")
+		meta(name="viewport", content="width=device-width, initial-scale=1")	
 		link(rel="shortcut icon", href="/images/gemstore-icon4-favicon.ico")
 		link(rel='stylesheet', href='/css/bootstrap.min.css')
 		link(rel='stylesheet', href='/css/style.css')
