--- a/views/partials/product.jade
+++ b/views/partials/product.jade
@@ -1,4 +1,4 @@
-div(ng-controller='StoreControllerOne')
+div(ng-controller='StoreControllerOne', class="siteClass")
 	.categories
 		a(href='products/show') All products 
 		span > 
