--- a/views/partials/site.jade
+++ b/views/partials/site.jade
@@ -1,4 +1,4 @@
 div(ng-controller='SiteController', class="siteClass")
-	span(ng-bind="site.title") 
+	h3(ng-bind="site.title") 
 	div(ng-bind-html="site.content")
 	
