--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -9,10 +9,23 @@ $siteWidth: 800px
   -moz-transition: background-color $duration ease-in-out
   -webkit-transition: background-color $duration ease-in-out
 
+@mixin marginLeftAnimation($duration)
+  transition: margin-left $duration ease-in-out 
+  -moz-transition: margin-left $duration ease-in-out
+  -webkit-transition: margin-left $duration ease-in-out
+
 @mixin backgroundImageAnimation($duration)
   transition: background $duration ease-in-out 
   -moz-transition: background $duration ease-in-out
   -webkit-transition: background $duration ease-in-out
+
+@mixin noSelecting
+  -webkit-touch-callout: none
+  -webkit-user-select: none
+  -khtml-user-select: none
+  -moz-user-select: none
+  -ms-user-select: none
+  user-select: none
 
 
 
@@ -40,6 +53,11 @@ a:hover
 
 a:link 
   text-decoration: none
+
+.left
+  float: left      
+.right
+  float: right
 
 header
   top: 0px
@@ -74,41 +92,80 @@ header
 
 nav
   height: $menuSize
+  width: $siteWidth
+  margin-left: auto
+  margin-right: auto
   ul
     text-align: center
+    margin-left: auto
+    margin-right: auto
     font-size: 18px
-    padding-top: 5px
-    padding-bottom: 5px
+    margin-top: 10px
+    padding-bottom: 0px
     padding-left: 0px
     margin-bottom: 0px
+    position: relative
+    //display: inline-table
     li
       display: inline-block
+      //float: left
       background-color: white
       list-style-type: none
       color: $blue
-      //border-radius: 5px
+      border-style: solid
+      border-color: #ddd
+      border-width: 1px
       text-align: center
-      padding: 7px
-      @include backgroundColorAnimation(.50s)
-    li:hover
-      background-color: $red
-      color: white
+      padding: 0//7px
+      //float: center
+      .menuButton 
+        padding: 7px 20px
+        @include backgroundColorAnimation(.50s)
+      .menuButton:hover
+        background-color: $red
+        color: white
+    li:hover > ul
+      display: block
+    ul
+      display: none
+      position: absolute
+      top: 100%
+      padding: 0
+      margin: 0
+      z-index: 5
+      //width: 100%
+      a
+        li
+          //padding: 0//7px
+          float: none
+          position: relative
+          display: block
+          width: inherit
+
+
+
+
+
 
 main
   margin-left: auto
   margin-right: auto
   width: $siteWidth
 
-.siteClass
-  padding-top: 5px
-  padding: 20px
-  width: 800px 
-  border-color: #ddd
-  border-width: 1px
-  border-top-style: none
-  border-right-style: solid
-  border-bottom-style: none
-  border-left-style: solid
+  .siteClass
+    //padding-top: 5px
+    padding: 10px
+    margin: 5px
+    border-color: #ddd
+    border-width: 1px
+    border-style: solid
+    text-align: justify
+
+
+
+
+
+
 
 ul.manyProducts
   list-style-type: none
@@ -157,10 +214,15 @@ ul.manyProducts
           margin-left: -15%
         .preview
           display: none
-          z-index: 2
+          //position: absolute
+          //top: 50%
+          z-index: 5
           position: fixed
           top: 150px
-          img          
+          img 
+            float: none
+            position: relative
+            display: block         
             border-style: solid
             border-width: 1px
             border-color: #ddd
@@ -168,12 +230,14 @@ ul.manyProducts
             margin-left: 0
           a
             display: inline-block
+            float: none
+            position: relative 
             img
               height: 100px
               width: 100px       
-      .image:hover
+      .image:hover 
         .preview
-          display: block 
+          display: block
           -webkit-animation: opacityAnimation 1s
           animation: opacityAnimation 1s           
       .description
@@ -197,6 +261,46 @@ ul.manyProducts
         .preview
           top: auto
           bottom: 150px
+
+.gallery
+  .galleryAll
+    .button
+      cursor: pointer
+      height: 122px
+      background-color: $red
+      width: 50px
+      text-align: center
+      padding-top: 20px
+      @include noSelecting
+      float: left
+    .disabled
+      background-color: #ddd
+    .gallerSlide
+      float: left
+      height: 122px
+      width: 400px
+      padding: 0
+      margin: 0 5px 0 5px
+      overflow: hidden
+      border-style: solid
+      border-width: 1px
+      border-color: #ddd
+      ul  
+        width: 99999px  
+        padding: 10px 
+        @include marginLeftAnimation(.25s)
+        li
+          padding: 2px
+          display: inline
+          a
+            img
+              height: 100px
+              width: 100px
+              border-style: solid
+              border-width: 1px
+              border-color: #ddd
+
+          
 
 
 
