--- a/views/index.jade
+++ b/views/index.jade
@@ -39,6 +39,7 @@ block body
   script(src='js/lib/angular/angular.min.js')
   script(src='js/lib/angular/angular-resource.min.js')
   script(src='js/lib/angular/angular-route.min.js')
+  script(src='js/lib/angular/angular-animate.min.js')
   script(src='js/lib/angular/textAngular.js')
   script(src='js/lib/angular/textAngular-sanitize.js')
   script(src='js/lib/angular/textAngularSetup.js')
