--- a/views/partials/templates/product-gallery.jade
+++ b/views/partials/templates/product-gallery.jade
@@ -1,5 +1,5 @@
 div(ng-show="product.images.length", class="gallery")
-	div(class="img-wrap")
+	div(class="image")
 		img(ng-src="./images/{{product.images[current]}}", height="400px", width="500px")
 	.galleryAll
 		span(class="button disabled fa fa-angle-left fa-5x", style="vertical-align: middle;", ng-show="marginValue==0")
