--- a/views/partials/templates/product-gallery.jade
+++ b/views/partials/templates/product-gallery.jade
@@ -1,15 +1,23 @@
 div(ng-show="product.images.length", class="gallery")
-	div(class="image")
-		img(ng-src="./images/{{product.images[current]}}", height="400px", width="500px")
-	.galleryAll
-		span(class="button disabled fa fa-angle-left fa-5x", style="vertical-align: middle;", ng-show="marginValue==0")
-		span(class="button fa fa-angle-left fa-5x", style="vertical-align: middle;", ng-click="left()", ng-hide="marginValue==0")
-		.gallerSlide
+	//div(class="image")
+	//	img(ng-src="./images/{{product.images[current]}}")
+	.imageDiv
+		.button.one.left(ng-hide="current==0", ng-click="leftOne()")
+			span(class="fa fa-angle-left fa-4x")
+		.button.one.right(ng-hide="current==product.images.length-1", ng-click="rightOne()")
+			span(class="fa fa-angle-right fa-4x")
+		.zoom
+			span(class="fa fa-search-plus fa-4x")
+		img(ng-src="./images/{{product.images[current]}}")
+	.galleryBar
+		.button.many.left(ng-hide="marginValue==0", ng-click="left()")
+			span(class="fa fa-angle-left fa-3x")
+		.gallerMin
 			ul(ng-style="{'margin-left': marginLeft}")
 				li(ng-repeat="image in product.images")
 					a(href ng-click="setCurrent($index)")
-						img(ng-src="./images/{{image}}")
-		span(class="button disabled fa fa-angle-right fa-5x", ng-show="marginValue==-product.images.length*104+312")
-		span(class="button fa fa-angle-right fa-5x", ng-click="right()", ng-hide="marginValue==-product.images.length*104+312")
+						img(ng-src="./images/{{image}}")							
+		.button.many.right(ng-hide="marginValue==(-product.images.length+4)*104 || product.images.length<=3", ng-click="right()")
+			span(class="fa fa-angle-right fa-3x")
 
 
