--- a/views/partials/templates/product-gallery.jade
+++ b/views/partials/templates/product-gallery.jade
@@ -2,22 +2,48 @@ div(ng-show="product.images.length", class="gallery")
 	//div(class="image")
 	//	img(ng-src="./images/{{product.images[current]}}")
 	.imageDiv
-		.button.one.left(ng-hide="current==0", ng-click="leftOne()")
+		.button.one.left(ng-hide="marginValue==0", ng-click="leftOne()")
 			span(class="fa fa-angle-left fa-4x")
-		.button.one.right(ng-hide="current==product.images.length-1", ng-click="rightOne()")
+		.button.one.right(ng-hide="marginValue==(-product.images.length+1)*400", ng-click="rightOne()")
 			span(class="fa fa-angle-right fa-4x")
 		.zoom
-			span(class="fa fa-search-plus fa-4x")
-		img(ng-src="./images/{{product.images[current]}}")
-	.galleryBar
-		.button.many.left(ng-hide="marginValue==0", ng-click="left()")
-			span(class="fa fa-angle-left fa-3x")
-		.gallerMin
+			span(class="fa fa-search-plus fa-4x", ng-click="fullGallery=true")
+		.imageHelper
 			ul(ng-style="{'margin-left': marginLeft}")
 				li(ng-repeat="image in product.images")
+					.imageContainer
+						img(ng-src="./images/gallerySize/{{image}}")
+		//img(ng-src="./images/{{product.images[current]}}")
+	.galleryBar
+		.button.many.left(ng-hide="marginValueMin==0", ng-click="left()")
+			span(class="fa fa-angle-left fa-3x")
+		.gallerMin
+			ul(ng-style="{'margin-left': marginLeftMin}")
+				li(ng-repeat="image in product.images")
 					a(href ng-click="setCurrent($index)")
-						img(ng-src="./images/{{image}}")							
-		.button.many.right(ng-hide="marginValue==(-product.images.length+4)*104 || product.images.length<=3", ng-click="right()")
+						img(ng-src="./images/thumbs/{{image}}")							
+		.button.many.right(ng-hide="marginValueMin==(-product.images.length+4)*104 || product.images.length<=3", ng-click="right()")
 			span(class="fa fa-angle-right fa-3x")
+
+.fullGallery(ng-show="fullGallery")
+	.imageDiv
+		.button.one.left(ng-hide="marginValueBig==0", ng-click="leftOneBig()")
+			span(class="fa fa-angle-left fa-5x")
+		.button.one.right(ng-hide="marginValueBig==(-product.images.length+1)*100", ng-click="rightOneBig()")
+			span(class="fa fa-angle-right fa-5x")
+		.button.close.right(ng-click="fullGallery=false")
+			span(class="fa fa-times fa-3x fa-fw")
+		.imageHelper
+			ul(ng-style="{'margin-left': marginLeftBig}")
+				li(ng-repeat="image in product.images")
+					.imageContainer
+						img(ng-src="./images/{{image}}")
+	.galleryBar
+		.gallerMin
+			ul
+				li(ng-repeat="image in product.images")
+					a(href ng-click="setCurrentBig($index)")
+						img(ng-src="./images/thumbs/{{image}}")						
+
 
 
