--- a/views/index.jade
+++ b/views/index.jade
@@ -29,7 +29,7 @@ block body
               .menuButton
                 span(ng-bind="site.title")  
               
-    main(ng-view scroll ng-class="{viewscroll:boolChangeClass}")
+    main(ng-view scroll)
 
 
     footer
