--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -64,20 +64,27 @@ $siteWidth: 800px
     opacity: 1
 
 
-@-webkit-keyframes opacityAnimatio 
+@-webkit-keyframes mainAnimation 
   from 
-    opacity: 0
+    margin-top: -100%//-200px
   to 
-    opacity: 1
+    margin-top: 0px
+
+@keyframes mainAnimation 
+  from 
+    margin-top: -100%//-200px
+  to 
+    margin-top: 0px
 
 
 main.ng-enter
-  -webkit-animation: opacityAnimatio 2s
-  animation: opacityAnimatio 2s
+  -webkit-animation: mainAnimation 2s
+  animation: mainAnimation 2s
 
 body
   margin: 0
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif
+  background-color: #ddd
 
 a
   color: $blue
@@ -95,6 +102,8 @@ header
   margin-left: auto
   margin-right: auto
   width: 100%
+  z-index: 1
+  position: relative
   .logo
     height: $logoSize
     background: url("../images/gemstore-logo-white.png")
@@ -102,7 +111,7 @@ header
     background-repeat: no-repeat
     background-position: center
 
-.fixed 
+nav.fixed 
   @extend header
   //@include backgroundImageAnimation(.50s)  
   position: fixed
@@ -117,6 +126,9 @@ header
   margin-top: auto
   -webkit-animation: opacityAnimation 2s
   animation: opacityAnimation 2s
+  ul
+    text-align: right
+    margin-right: 10px
 
 
 
@@ -135,7 +147,7 @@ nav
     position: fixed
     z-index: 10
     top: 3px
-    left: 15px
+    left: 10px
     //display: none
   ul
     text-align: center
@@ -154,12 +166,13 @@ nav
       @include border
       text-align: center
       padding: 0
+      border-color: #fff
+      border-style: solid
+      border-width: 1px
       .menuButton 
         padding: 7px 20px
         color: white
         @include backgroundColorAnimation(.50s)
-        //span
-          //margin: 7px 20px
       .menuButton2
         padding: 7px 20px
         background-color: $red
@@ -174,6 +187,8 @@ nav
     li:hover > ul
       display: block
     ul
+      -webkit-animation: opacityAnimation 1s
+      animation: opacityAnimation 1s
       display: none
       position: absolute
       top: 100%
@@ -184,6 +199,7 @@ nav
       a
         li
           //padding: 0//7px
+          border-top-style: none
           float: none
           position: relative
           display: block
@@ -198,6 +214,10 @@ main
   margin-left: auto
   margin-right: auto
   width: $siteWidth
+  //background-color: #ddd
+  //margin-top: -100px
+  z-index: 0
+  position: relative
 
   .siteClass
     //padding-top: 5px
@@ -308,12 +328,20 @@ $galleryBar: 75px
 .gallery
   @include noSelecting
   margin: 5px
-  width: $galleryWidth+10
-  height: $galleryHeight+15
-  padding: 5px
-  //outline: 1px solid #000
-  //outline-offset: 0px
-  background-color: #ddd
+  width: $galleryWidth+20
+  height: $galleryHeight+25
+  padding: 10px
+  outline: 1px solid #fff
+  outline-offset: -5px
+  //background-color: #ddd
+  background: rgb(63,169,245)
+  background: -moz-linear-gradient(45deg, rgba(63,169,245,1) 0%, rgba(143,2,34,1) 99%)
+  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,rgba(63,169,245,1)), color-stop(99%,rgba(143,2,34,1)))
+  background: -webkit-linear-gradient(45deg, rgba(63,169,245,1) 0%,rgba(143,2,34,1) 99%)
+  background: -o-linear-gradient(45deg, rgba(63,169,245,1) 0%,rgba(143,2,34,1) 99%)
+  background: -ms-linear-gradient(45deg, rgba(63,169,245,1) 0%,rgba(143,2,34,1) 99%)
+  background: linear-gradient(45deg, rgba(63,169,245,1) 0%,rgba(143,2,34,1) 99%)
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3fa9f5', endColorstr='#8f0222',GradientType=1 )
   .left
     left: 0      
   .right
@@ -340,9 +368,10 @@ $galleryBar: 75px
     height: $galleryHeight - $galleryBar
     width: $galleryWidth
     .one
-      height: $galleryHeight - $galleryBar
+      height: $galleryHeight - $galleryBar - 5px
       width: 30px
       display: none
+      margin-top: 2px
       span
         margin-top: ($galleryHeight - $galleryBar)*0.4
         opacity: .75
@@ -401,11 +430,14 @@ $galleryBar: 75px
             vertical-align: middle
             img
               display: block
-              max-height: $galleryHeight - $galleryBar
-              max-width: $galleryWidth
+              max-height: $galleryHeight - $galleryBar - 5px
+              max-width: $galleryWidth - 5px
               border: none
               overflow: hidden
               margin: auto
+              -webkit-box-shadow: 3px 3px 2px 0px rgba(50, 50, 50, 0.75)
+              -moz-box-shadow:    3px 3px 2px 0px rgba(50, 50, 50, 0.75)
+              box-shadow:         3px 3px 2px 0px rgba(50, 50, 50, 0.75)
 
   .imageDiv:hover
     //@include outline
@@ -435,6 +467,9 @@ $galleryBar: 75px
       z-index: 1
       padding: 0
       overflow: hidden
+      -webkit-box-shadow: 3px 3px 2px 0px rgba(50, 50, 50, 0.75)
+      -moz-box-shadow:    3px 3px 2px 0px rgba(50, 50, 50, 0.75)
+      box-shadow:         3px 3px 2px 0px rgba(50, 50, 50, 0.75)
       ul  
         width: 99999px  
         padding: 0px
@@ -604,11 +639,6 @@ footer
 
 .hide 
   display: none
-
-
-
-.viewscroll 
-  top: $logoSize+$menuSize + 5
 
 
 
