--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -125,7 +125,15 @@ nav.fixed
   position: fixed
   z-index: 3
   height: $menuSize
-  @include backgroundColor
+  //@include backgroundColor
+  background: rgb(255,0,51)
+  background: -moz-linear-gradient(-45deg, rgba(255,0,51,1) 0%, rgba(143,2,34,1) 38%, rgba(143,2,34,1) 38%, rgba(63,169,245,1) 100%)
+  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(255,0,51,1)), color-stop(38%,rgba(143,2,34,1)), color-stop(38%,rgba(143,2,34,1)), color-stop(100%,rgba(63,169,245,1)))
+  background: -webkit-linear-gradient(-45deg, rgba(255,0,51,1) 0%,rgba(143,2,34,1) 38%,rgba(143,2,34,1) 38%,rgba(63,169,245,1) 100%)
+  background: -o-linear-gradient(-45deg, rgba(255,0,51,1) 0%,rgba(143,2,34,1) 38%,rgba(143,2,34,1) 38%,rgba(63,169,245,1) 100%)
+  background: -ms-linear-gradient(-45deg, rgba(255,0,51,1) 0%,rgba(143,2,34,1) 38%,rgba(143,2,34,1) 38%,rgba(63,169,245,1) 100%)
+  background: linear-gradient(135deg, rgba(255,0,51,1) 0%,rgba(143,2,34,1) 38%,rgba(143,2,34,1) 38%,rgba(63,169,245,1) 100%)
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0033', endColorstr='#3fa9f5',GradientType=1 )
   //background: url("../images/gemstore-logo-white-small.png")
   background-repeat: no-repeat
   background-position: left
