--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -85,12 +85,14 @@ html
   height: 100%
 
 body
-  margin: 0
+  margin: 0px
+  padding: 0px
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif
   background-color: #ddd
   @include backgroundColor
   color: white
   height: 100%
+  width: 100%
   background-repeat: no-repeat
   background-attachment: fixed
 
@@ -110,7 +112,7 @@ header
   margin-left: auto
   margin-right: auto
   width: 100%
-  z-index: 1
+  //z-index: 1
   position: relative
   .logo
     height: $logoSize
@@ -164,7 +166,7 @@ nav
     height: $menuSize
     width: 333px
     position: fixed
-    z-index: 10
+    z-index: 3
     top: 3px
     left: 10px
     //display: none
@@ -213,7 +215,7 @@ nav
       top: 100%
       padding: 0
       margin: 0
-      z-index: 5
+      z-index: 3
       //width: 100%
       a
         li
@@ -353,14 +355,7 @@ $galleryBar: 75px
   outline: 1px solid #fff
   outline-offset: -5px
   //background-color: #ddd
-  background: rgb(63,169,245)
-  background: -moz-linear-gradient(45deg, rgba(63,169,245,1) 0%, rgba(143,2,34,1) 99%)
-  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,rgba(63,169,245,1)), color-stop(99%,rgba(143,2,34,1)))
-  background: -webkit-linear-gradient(45deg, rgba(63,169,245,1) 0%,rgba(143,2,34,1) 99%)
-  background: -o-linear-gradient(45deg, rgba(63,169,245,1) 0%,rgba(143,2,34,1) 99%)
-  background: -ms-linear-gradient(45deg, rgba(63,169,245,1) 0%,rgba(143,2,34,1) 99%)
-  background: linear-gradient(45deg, rgba(63,169,245,1) 0%,rgba(143,2,34,1) 99%)
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3fa9f5', endColorstr='#8f0222',GradientType=1 )
+
   .left
     left: 0      
   .right
@@ -510,16 +505,21 @@ $galleryBar: 75px
       display: block
 
 
+
 .fullGallery
   @include noSelecting
   width: 100%
   height: 100%
   position: fixed
-  z-index: 5
-  background-color: rgba(0,0,0,0.50)
+  z-index: 9
+  background-color: rgba(0,0,0,0.75)
   top: 0
   left: 0
-  display: relative
+  .background
+    width: 100%
+    height: 100%
+    position: fixed
+    z-index: 1
   .left
     left: 0      
   .right
@@ -528,7 +528,7 @@ $galleryBar: 75px
   .button
     cursor: pointer
     z-index: 8
-    position: absolute
+    position: fixed
     text-align: center
     background-color: rgba(0,0,0,0.25)
     span
@@ -560,7 +560,7 @@ $galleryBar: 75px
       float: left
       height: 100%
       width: 100%
-      z-index: 6
+      z-index: 9
       padding: 0
       overflow: hidden
       ul  
@@ -569,22 +569,26 @@ $galleryBar: 75px
         padding: 0
         margin-bottom: 0
         @include marginLeftAnimation(.25s)
-        li
+        //li
+          //display: inline-block
+          //width: 1%
+        .imageContainer
           display: inline-block
           width: 1%
-          .imageContainer
-            height: 100%
-            width: 100%
-            margin-left: 0.05%
-            //display: table-cell
-            //vertical-align: middle
-            img
-              display: block
-              max-height: 100%
-              max-width: 100%
-              border: none
-              overflow: hidden
-              margin: auto
+          height: 100%
+          //width: 100%
+          margin-left: 0
+          //display: table-cell
+          //vertical-align: middle
+          img
+            display: block
+            max-height: 100%
+            max-width: 100%
+            //-moz-width: 100%
+            //-moz-height: 100%
+            border: none
+            overflow: hidden
+            margin: auto
 
   .galleryBar
     height: $galleryBar
@@ -629,7 +633,7 @@ footer
   //background-color: $blue
   color: white
   text-align: center
-  padding: 5px
+  padding: 0px
 
 
 
